--- a/style.css
+++ b/style.css
@@ -1,10 +1,62 @@
 
+	body {
+	
+	background-image:url("tea.jpg"); 
+    background-size:cover;
+	height:550px;
+}
+header {
+	background-color: white;
+	text-align:center;
+}
+a {
+	margin:30px;
+}
+div {
+	display:flex;
+	flex-direction:row;
+	flex-wrap:wrap;
+}	
+#Myphoto{
+	width:300px;
+	height:300px;
+	float:right;
+	margin-top:5em;
+	
+}
+img.logo{
+	flex-direction:row;
+	flex-wrap:nowrap;
+	justify-content:left;
+	align-content:center;
+	
+}
 h1 {
-	 color:red;
+	 color:#640e98;
+	 text-align: 
 	 font-family:"Libre Baskerville";
 }
-p {
-	color:#000000;
-	font-family: 'Nanum Pen Script', cursive;
+
+h2 {
+    color: #da1352;
+	font-family: "Poppins";
+	font-size: 30px;
 }
-	 
+	
+p {
+	color:#0d5a63;
+	font-family: 'Poppins', cursive;
+	font-size: 20px;
+	display:inline;
+	flex-direction:column;
+	flex-wrap:wrap;
+	justify-content:space-evenly;
+	align-content:space-evenly;
+	}
+img{
+	width:20px
+}
+a{
+	text-decoration:none;
+
+
